[package]
name = "iced-hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
# iced = { version = "0.13.1", default-features = false, features = ["wgpu"] }
iced = { git = "https://github.com/iced-rs/iced", default-features = false, features = ["wgpu"] }
# iced = { path = "../iced", default-features = false, features = ["wgpu"] }

[profile.release]
debug = true
